cosmetic tweak to prevent improve input box contents from wrapping on Firefox

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -4,8 +4,7 @@
 }
 
 #input-container {
-    width: 480px;
-    margin: auto;
+    text-align: center;
 }
 
 #input-text {
